<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />

        <item android:title="Account">
            <menu>
                <item android:id="@+id/nav_my_profile"
                    android:title="My Profile"
                    android:icon="@drawable/ic_baseline_account_circle_24"/>
                <item android:id="@+id/nav_change_password"
                    android:title="Change Password"
                    android:icon="@drawable/ic_baseline_lock_24"/>
                <item android:id="@+id/nav_sign_out"
                    android:title="Sign Out"
                    android:icon="@drawable/ic_baseline_account_circle_24"/>
            </menu>
        </item>
    </group>
</menu>